--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     //Calendar Library
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
     implementation 'com.afollestad.material-dialogs:datetime:3.3.0'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.10.0"
 }
