--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta02"
     implementation 'com.afollestad.material-dialogs:datetime:3.3.0'
     implementation "com.google.accompanist:accompanist-flowlayout:0.10.0"
+    implementation "androidx.emoji:emoji:1.2.0-alpha03"
 }
