--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0-rc01'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha02'
+    implementation 'androidx.datastore:datastore-core:1.0.0-alpha08'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -72,4 +74,15 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:datetime:3.3.0'
     implementation "com.google.accompanist:accompanist-flowlayout:0.10.0"
     implementation "androidx.emoji:emoji:1.2.0-alpha03"
+
+    //Preferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
+
+    //lifecycle-livedata
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
+
 }
