--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
 
+    //Chart's library
+    implementation('io.github.bytebeats:compose-charts:0.1.0')
+    //implementation ('com.github.tehras:charts:master-SNAPSHOT')
+
 }
