Plces API integrated almost

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,10 +9,11 @@ pluginManagement {
         id 'com.android.application' version '7.1.0-alpha04'
         id 'com.android.library' version '7.1.0-alpha04'
         id 'org.jetbrains.kotlin.android' version '1.5.10'
+        id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    //repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
