--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha02'
     implementation 'androidx.datastore:datastore-core:1.0.0-alpha08'
+    implementation 'com.google.android.libraries.places:places:2.5.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -88,5 +89,6 @@ dependencies {
     //Chart's library
     implementation('io.github.bytebeats:compose-charts:0.1.0')
     //implementation ('com.github.tehras:charts:master-SNAPSHOT')
+
 
 }
