--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,11 @@ buildscript {
     ext {
         compose_version = '1.0.0-rc02'
     }
+    repositories {
+        google()
+        mavenCentral()
+        maven { url('https://repo1.maven.org/maven2/') }
+        //maven { url 'https://jitpack.io' }
+    }
+
 }
