--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ freeline.py
 freeline/
 freeline_project_description.json
 
+
 # fastlane
 fastlane/report.xml
 fastlane/Preview.html
@@ -83,3 +84,5 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+API_KEY.kt
