--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id "org.jetbrains.kotlin.kapt" version "1.5.10"
 
 }
 
@@ -16,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "prieto.fernando.sample.webmock.MockTestRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -103,10 +102,5 @@ dependencies {
     //Chart's library
     implementation('io.github.bytebeats:compose-charts:0.1.0')
 
-    // For instrumented tests.
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
-    // ...with Kotlin.
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
-    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
 
 }
