--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "org.jetbrains.kotlin.kapt" version "1.5.10"
 
 }
 
@@ -99,8 +100,20 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
 
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
+
     //Chart's library
     implementation('io.github.bytebeats:compose-charts:0.1.0')
+
+    // For instrumented tests.
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    // ...with Kotlin.
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
+    // ...with Java.
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
 
 
 }
