--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,7 +100,8 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0-alpha03"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha04"
 
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
+
 
     //Chart's library
     implementation('io.github.bytebeats:compose-charts:0.1.0')
@@ -111,9 +112,6 @@ dependencies {
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
     // ...with Java.
     androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
-
-    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.3")
 
 
 }
