--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,6 @@ dependencies {
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.6.0"
     implementation 'com.squareup.okhttp3:okhttp:4.6.0'
 
-
-
     //Chart's library
     implementation('io.github.bytebeats:compose-charts:0.1.0')
 
@@ -114,6 +112,9 @@ dependencies {
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
     // ...with Java.
     androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.38.1'
+
+
+    androidTestImplementation("androidx.navigation:navigation-testing:2.4.2")
 
 
 }
